# PolyDroid2

./: .gitignore  .gitmodules  README.md  settings.gradle.kts  tar_errors.txt  test.bat
.github/workflows/: build.yml  discord-release.yml  payload.txt
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/termux/x11/: ICmdEntryInterface.aidl
app/src/main/assets/: libX11_patched.so.6  libasound.so.2.0.0  proxy_ca.crt  proxy_server.p12
app/src/main/assets/arm64-x11-libs/: libstdc++.so.6
app/src/main/assets/glibc-x86_64/: libX11.so.6  libXext.so.6  libdbus-1.so.3  libpulse-simple.so.0  libpulse.so.0  test_nanosleep  test_timer  test_timerfd
app/src/main/assets/mesa-zink/: libGLESv2.so.2.0.0  libdrm.so.2  libglapi.so.0.0.0
app/src/main/cpp/: CMakeLists.txt  audio_trace_shim.c  connect_redirect_shim.c  dbus_stub.c  dns_resolver_x86_64.c  fmod_sched_shim.c  glx_shim.c  libX11_stub.c  native_window_jni.c  path_remapper.c  pulse_simple_stub.c  pulse_stub.c  unity_crash_fix.c  vulkan_surface_shim.c
app/src/main/java/com/cetotos/polydroid2/: AudioBridge.kt  Box64Launcher.kt  ClientProxy.kt  (+12 more)
app/src/main/res/drawable/: emergency_heat_24.xml  ic_settings.xml
app/src/main/res/layout/: activity_launcher.xml
app/src/main/res/layout-land/: activity_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_polytoria_round.xml
app/src/main/res/values/: ic_polytoria_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-x86.sh  fetch-assets.sh
(+5 files in other folders)
